[gd_scene load_steps=36 format=3 uid="uid://bu3mr741gkvrq"]

[ext_resource type="Texture2D" uid="uid://cpbb0i36uhgbq" path="res://KxPFmfhg.png" id="1_ybyfs"]
[ext_resource type="Script" path="res://BattleScene/Battleground.gd" id="2_4fejy"]
[ext_resource type="Script" path="res://BattleScene/PlayerTurn.gd" id="3_cretm"]
[ext_resource type="Script" path="res://Unit/Unit.gd" id="3_kjm3n"]
[ext_resource type="Script" path="res://BattleScene/EnemyTurn.gd" id="4_dhb6o"]
[ext_resource type="Script" path="res://BattleScene/SelectEnemyBG.gd" id="4_kpmye"]
[ext_resource type="Script" path="res://BattleScene/BattleManager.gd" id="4_p4ijo"]
[ext_resource type="Script" path="res://BattleScene/EnemySelector.gd" id="5_5hphj"]
[ext_resource type="Script" path="res://BattleScene/CompleteAction.gd" id="5_qtrjn"]
[ext_resource type="Script" path="res://UI/Skillpoints.gd" id="6_f81yq"]
[ext_resource type="Script" path="res://UI/Skillname.gd" id="7_cwe3h"]
[ext_resource type="Script" path="res://BattleScene/SelectAllyBG.gd" id="7_rayo2"]
[ext_resource type="Script" path="res://BattleScene/States/TurnDecide/ChooseTurn.gd" id="8_02rmb"]
[ext_resource type="Script" path="res://BattleScene/SelectAlly.gd" id="8_ejyrp"]
[ext_resource type="Script" path="res://BattleScene/SkillInputs.gd" id="9_icg8r"]
[ext_resource type="Script" path="res://BattleScene/Sam.gd" id="10_rubd4"]
[ext_resource type="Script" path="res://BattleScene/EndFight.gd" id="11_f76x8"]
[ext_resource type="Script" path="res://BattleScene/Sophie.gd" id="12_qqmey"]
[ext_resource type="PackedScene" uid="uid://cxcxmi4qbfg2e" path="res://Unit/Sam/sam_model.tscn" id="13_4wfho"]
[ext_resource type="Script" path="res://BattleScene/BB.gd" id="14_2yvau"]
[ext_resource type="PackedScene" uid="uid://b6oh1smyml84j" path="res://Unit/Sophie/sophia_model.tscn" id="15_766op"]
[ext_resource type="PackedScene" uid="uid://dk2u8s6mre8l4" path="res://Unit/BB/bb_model.tscn" id="17_mwipc"]
[ext_resource type="Script" path="res://BattleScene/SkillDamage.gd" id="21_2hxki"]
[ext_resource type="Script" path="res://BattleScene/CurrentState.gd" id="24_x633m"]
[ext_resource type="Script" path="res://BattleScene/MainBattleCamera.gd" id="25_ofn88"]
[ext_resource type="Script" path="res://BattleScene/PathFollow3D.gd" id="26_2xwa2"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_0blkr"]
panorama = ExtResource("1_ybyfs")

[sub_resource type="Sky" id="Sky_glpqg"]
sky_material = SubResource("PanoramaSkyMaterial_0blkr")

[sub_resource type="Environment" id="Environment_ccmnm"]
background_mode = 2
background_color = Color(0.92549, 0.615686, 0.843137, 1)
sky = SubResource("Sky_glpqg")
sky_custom_fov = 51.1
ambient_light_source = 2
ambient_light_color = Color(0.784314, 0.717647, 0.694118, 1)
ambient_light_energy = 2.2
tonemap_mode = 2

[sub_resource type="PlaneMesh" id="PlaneMesh_ae5g0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3bggr"]
albedo_color = Color(0.721377, 0.274627, 0.34483, 1)

[sub_resource type="BoxMesh" id="BoxMesh_dyvs1"]
material = SubResource("StandardMaterial3D_3bggr")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lyqfs"]
albedo_color = Color(0.258824, 0.796078, 0, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_qsc3p"]
material = SubResource("StandardMaterial3D_lyqfs")

[sub_resource type="Curve3D" id="Curve3D_gvxab"]
_data = {
"points": PackedVector3Array(-0.0186071, -0.0517178, 1.47523, 0.0186071, 0.0517178, -1.47523, -3.91275, 0.563349, -4.64343, -2.70158, -0.101928, -0.0665646, 2.70158, 0.101928, 0.0665646, -0.672681, 0.585304, -8.18843, -0.06373, 0.0721154, -2.57156, 0.06373, -0.0721154, 2.57156, 2.68772, 0.456866, -4.22576, 2.118, 0.0104213, -0.0698686, -2.118, -0.0104213, 0.0698686, -0.853764, 0.449827, -0.90738, -0.0372264, -4.43459e-05, 1.28048, 0.0372264, 4.43459e-05, -1.28048, -3.91196, 0.544594, -4.62301),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="BattleScene" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ccmnm")

[node name="BattleManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_p4ijo")

[node name="States" type="Node" parent="BattleManager"]

[node name="ChooseTurn" type="Node" parent="BattleManager/States"]
script = ExtResource("8_02rmb")

[node name="PlayerTurn" type="Node" parent="BattleManager/States"]
script = ExtResource("3_cretm")

[node name="EnemyTurn" type="Node" parent="BattleManager/States"]
script = ExtResource("4_dhb6o")

[node name="SelectEnemyBG" type="Node" parent="BattleManager/States"]
script = ExtResource("4_kpmye")

[node name="SelectAllyBG" type="Node" parent="BattleManager/States"]
script = ExtResource("7_rayo2")

[node name="SelectAlly" type="Node" parent="BattleManager/States"]
script = ExtResource("8_ejyrp")

[node name="CompleteAction" type="Node" parent="BattleManager/States"]
script = ExtResource("5_qtrjn")

[node name="SkillInputs" type="Node" parent="BattleManager/States"]
script = ExtResource("9_icg8r")

[node name="EndFight" type="Node" parent="BattleManager/States"]
script = ExtResource("11_f76x8")

[node name="PlayerUnits" type="Node" parent="BattleManager"]

[node name="Sam" type="Node3D" parent="BattleManager/PlayerUnits"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 1.58088, -0.64188, 0)
script = ExtResource("10_rubd4")
max_health = 10
current_health = 10
attack = 5
defense = 5
speed = 10

[node name="Sam2" parent="BattleManager/PlayerUnits/Sam" instance=ExtResource("13_4wfho")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.7142, 0)

[node name="metarig" parent="BattleManager/PlayerUnits/Sam/Sam2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0173855, 2.58223, -0.530669)

[node name="Skeleton3D" parent="BattleManager/PlayerUnits/Sam/Sam2/metarig" index="0"]
bones/0/position = Vector3(-0.00756502, 3.66088, -0.338561)
bones/1/rotation = Quaternion(-0.0644764, 0, 0, 0.997919)
bones/6/rotation = Quaternion(-0.0937118, 0, 0, 0.995599)
bones/8/rotation = Quaternion(0.17287, 0.72206, -0.158139, 0.650951)
bones/9/rotation = Quaternion(0.110825, -0.103018, 0.0321413, 0.987964)
bones/11/rotation = Quaternion(-0.605155, 0.345863, 0.356134, 0.622363)
bones/12/rotation = Quaternion(0.17287, -0.72206, 0.158139, 0.650951)
bones/13/rotation = Quaternion(0.110825, 0.103018, -0.0321414, 0.987964)
bones/19/rotation = Quaternion(0.983811, 0.0172146, -0.00364121, 0.178346)
bones/20/rotation = Quaternion(0.0948054, 0.000536576, 0.0300864, 0.995041)
bones/24/rotation = Quaternion(0.983811, -0.0172146, 0.00364121, 0.178346)
bones/25/rotation = Quaternion(0.0948054, -0.000536576, -0.0300864, 0.995041)

[node name="BoneAttachment3D" parent="BattleManager/PlayerUnits/Sam/Sam2/metarig/Skeleton3D" index="7"]
transform = Transform3D(-0.0499818, -0.99807, 0.0368474, 0.998368, -0.0489072, 0.0295103, -0.0276513, 0.0382623, 0.998885, -4.7212, 7.26744, -0.0437416)

[node name="Sophie" type="Node3D" parent="BattleManager/PlayerUnits"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 9.62273, 0.117663, -6.13227)
script = ExtResource("12_qqmey")
max_health = 13
current_health = 13
attack = 7
defense = 7
speed = 7
startingBG = 1

[node name="Sophia" parent="BattleManager/PlayerUnits/Sophie" instance=ExtResource("15_766op")]
transform = Transform3D(-0.992768, 0, -0.12005, 0, 1, 0, 0.12005, 0, -0.992768, 0, 0, 3.36327)

[node name="Skeleton3D" parent="BattleManager/PlayerUnits/Sophie/Sophia/metarig" index="0"]
bones/1/rotation = Quaternion(-0.0644764, -7.41115e-09, -1.78927e-09, 0.997919)
bones/19/rotation = Quaternion(0.987132, 0.0111963, -0.0330435, 0.156052)
bones/20/rotation = Quaternion(0.056915, 0.0579401, 0.0284709, 0.99629)

[node name="BB" type="Node3D" parent="BattleManager/PlayerUnits"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -5.85246, -0.64188, -7.92178)
script = ExtResource("14_2yvau")
max_health = 20
current_health = 20
attack = 5
defense = 10
speed = 5
startingBG = 2

[node name="BB" parent="BattleManager/PlayerUnits/BB" instance=ExtResource("17_mwipc")]
transform = Transform3D(-0.998844, 0, 0.0480654, -0.0042811, 0.996026, -0.0889652, -0.0478744, -0.0890681, -0.994874, 0, 2.95345, 8.53567)

[node name="Battlegrounds" type="Node" parent="BattleManager"]

[node name="Battleground" type="Node3D" parent="BattleManager/Battlegrounds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.36123, 0, 0)
script = ExtResource("2_4fejy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BattleManager/Battlegrounds/Battleground"]
transform = Transform3D(2.48962, 0, 0, 0, 1, 0, 0, 0, 2.52378, 0.103124, 0, 0.111186)
mesh = SubResource("PlaneMesh_ae5g0")
skeleton = NodePath("")

[node name="AttackerPos" type="Node3D" parent="BattleManager/Battlegrounds/Battleground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.12662, 0, -1.70611)

[node name="Battleground2" type="Node3D" parent="BattleManager/Battlegrounds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.48942, 0, -5.44311)
script = ExtResource("2_4fejy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BattleManager/Battlegrounds/Battleground2"]
transform = Transform3D(2.48962, 0, 0, 0, 1, 0, 0, 0, 2.52378, 0, 0, 0)
mesh = SubResource("PlaneMesh_ae5g0")
skeleton = NodePath("")

[node name="AttackerPos" type="Node3D" parent="BattleManager/Battlegrounds/Battleground2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.12662, 0, -1.70611)

[node name="Battleground3" type="Node3D" parent="BattleManager/Battlegrounds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.42787, 0, -5.95517)
script = ExtResource("2_4fejy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BattleManager/Battlegrounds/Battleground3"]
transform = Transform3D(2.48962, 0, 0, 0, 1, 0, 0, 0, 2.52378, 0, 0, 0)
mesh = SubResource("PlaneMesh_ae5g0")
skeleton = NodePath("")

[node name="AttackerPos" type="Node3D" parent="BattleManager/Battlegrounds/Battleground3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.12662, 0, -1.70611)

[node name="Battleground4" type="Node3D" parent="BattleManager/Battlegrounds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.75759, 0, -12.5466)
script = ExtResource("2_4fejy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BattleManager/Battlegrounds/Battleground4"]
transform = Transform3D(2.48962, 0, 0, 0, 1, 0, 0, 0, 2.52378, 0, 0, 0)
mesh = SubResource("PlaneMesh_ae5g0")
skeleton = NodePath("")

[node name="AttackerPos" type="Node3D" parent="BattleManager/Battlegrounds/Battleground4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.12662, 0, -1.70611)

[node name="EnemyUnits" type="Node" parent="BattleManager"]

[node name="Enemy1" type="Node3D" parent="BattleManager/EnemyUnits"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.28731, 0, 7.38815)
script = ExtResource("3_kjm3n")
max_health = 10
current_health = 10
attack = 4
defense = 2
speed = 7
enemy_unit = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="BattleManager/EnemyUnits/Enemy1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0761206, 0.543812, 0)
mesh = SubResource("BoxMesh_dyvs1")

[node name="Enemy2" type="Node3D" parent="BattleManager/EnemyUnits"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.1778, 0, 14.9895)
script = ExtResource("3_kjm3n")
max_health = 13
current_health = 13
attack = 3
defense = 1
speed = 6
enemy_unit = true
startingBG = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="BattleManager/EnemyUnits/Enemy2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0761204, 0.543812, -0.674129)
mesh = SubResource("BoxMesh_dyvs1")

[node name="Enemy3" type="Node3D" parent="BattleManager/EnemyUnits"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.17886, 0, 14.1841)
script = ExtResource("3_kjm3n")
max_health = 10
current_health = 10
attack = 4
defense = 2
speed = 7
enemy_unit = true
startingBG = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="BattleManager/EnemyUnits/Enemy3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0761204, 0.543812, -0.465992)
mesh = SubResource("BoxMesh_dyvs1")

[node name="Enemy4" type="Node3D" parent="BattleManager/EnemyUnits"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.14065, 0, 21.8315)
script = ExtResource("3_kjm3n")
max_health = 5
current_health = 5
attack = 2
defense = 1
speed = 3
enemy_unit = true
startingBG = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="BattleManager/EnemyUnits/Enemy4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0761206, 0.543812, 0)
mesh = SubResource("BoxMesh_dyvs1")

[node name="EnemyBGs" type="Node" parent="BattleManager"]

[node name="Battleground" type="Node3D" parent="BattleManager/EnemyBGs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.30487)
script = ExtResource("2_4fejy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BattleManager/EnemyBGs/Battleground"]
transform = Transform3D(2.48962, 0, 0, 0, 1, 0, 0, 0, 2.52378, 1.28731, 0, 0.111186)
mesh = SubResource("PlaneMesh_ae5g0")
skeleton = NodePath("")

[node name="AttackerPos" type="Node3D" parent="BattleManager/EnemyBGs/Battleground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.12662, 0, -1.70611)

[node name="Battleground2" type="Node3D" parent="BattleManager/EnemyBGs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.48942, 0, 14.0928)
script = ExtResource("2_4fejy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BattleManager/EnemyBGs/Battleground2"]
transform = Transform3D(2.48962, 0, 0, 0, 1, 0, 0, 0, 2.52378, 0, 0, 0)
mesh = SubResource("PlaneMesh_ae5g0")
skeleton = NodePath("")

[node name="AttackerPos" type="Node3D" parent="BattleManager/EnemyBGs/Battleground2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.634101, 0, -1.70611)

[node name="Battleground3" type="Node3D" parent="BattleManager/EnemyBGs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.42787, 0, 13.5808)
script = ExtResource("2_4fejy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BattleManager/EnemyBGs/Battleground3"]
transform = Transform3D(2.48962, 0, 0, 0, 1, 0, 0, 0, 2.52378, 0, 0, 0)
mesh = SubResource("PlaneMesh_ae5g0")
skeleton = NodePath("")

[node name="AttackerPos" type="Node3D" parent="BattleManager/EnemyBGs/Battleground3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.130697, 0, -1.70611)

[node name="Battleground4" type="Node3D" parent="BattleManager/EnemyBGs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.75759, 0, 21.5305)
script = ExtResource("2_4fejy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BattleManager/EnemyBGs/Battleground4"]
transform = Transform3D(2.48962, 0, 0, 0, 1, 0, 0, 0, 2.52378, 0, 0, 0)
mesh = SubResource("PlaneMesh_ae5g0")
skeleton = NodePath("")

[node name="AttackerPos" type="Node3D" parent="BattleManager/EnemyBGs/Battleground4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.366076, 0, -1.70611)

[node name="UI3d" type="Node3D" parent="BattleManager"]

[node name="EnemySelector" type="MeshInstance3D" parent="BattleManager/UI3d"]
transform = Transform3D(0.0774062, -0.99346, -0.0839406, 0.693788, 0.114138, -0.711077, 0.716007, -0.00319518, 0.698086, 1.48829, 2.59487, 16.5285)
mesh = SubResource("PlaneMesh_qsc3p")
script = ExtResource("5_5hphj")

[node name="Control" type="Control" parent="BattleManager"]
layout_mode = 3
anchors_preset = 0
offset_right = 1002.0
offset_bottom = 564.0

[node name="Skillpoints" type="TextEdit" parent="BattleManager/Control"]
visible = false
layout_mode = 0
offset_right = 129.0
offset_bottom = 41.0
text = "Skill points: 5"
script = ExtResource("6_f81yq")

[node name="SkillDamage" type="TextEdit" parent="BattleManager/Control"]
layout_mode = 0
offset_left = 3.0
offset_top = 48.0
offset_right = 132.0
offset_bottom = 89.0
text = "Damage: "
script = ExtResource("21_2hxki")

[node name="Skillname" type="TextEdit" parent="BattleManager/Control"]
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 252.0
offset_bottom = 44.0
text = "Skill Name: "
script = ExtResource("7_cwe3h")

[node name="CurrentState" type="TextEdit" parent="BattleManager/Control"]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 252.0
offset_bottom = 44.0
text = "State Name: "
script = ExtResource("24_x633m")

[node name="Cameras" type="Node" parent="BattleManager"]

[node name="MainBattleCamera" type="Camera3D" parent="BattleManager/Cameras"]
transform = Transform3D(-0.0755113, 0.387049, -0.918962, 0.0292985, 0.922056, 0.385945, 0.996714, 0.00221901, -0.0809657, -19.2701, 9.94786, 3.5505)
current = true
script = ExtResource("25_ofn88")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BattleManager/Cameras/MainBattleCamera"]

[node name="UnitSelectedCamera" type="Camera3D" parent="BattleManager/Cameras"]

[node name="CameraPoints" type="Node" parent="BattleManager"]

[node name="BG1Cam" type="Node3D" parent="BattleManager/CameraPoints"]
transform = Transform3D(0.667365, 0, -0.744731, 0, 1, 0, 0.744731, 0, 0.667365, -0.710243, 2.66584, 1.86951)

[node name="BG2Cam" type="Node3D" parent="BattleManager/CameraPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.77798, 3.19882, -3.35179)

[node name="BG3Cam" type="Node3D" parent="BattleManager/CameraPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.07274, 3.07316, -3.13666)

[node name="BG4Cam" type="Node3D" parent="BattleManager/CameraPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.29736, 3.07316, -8.04473)

[node name="CameraPaths" type="Node" parent="BattleManager"]

[node name="Path3D" type="Path3D" parent="BattleManager/CameraPaths"]
transform = Transform3D(0.0243798, 0, -0.999703, 0, 1, 0, 0.999703, 0, 0.0243798, -2.97166, 1.62799, 0.968839)
curve = SubResource("Curve3D_gvxab")

[node name="PathFollow3D" type="PathFollow3D" parent="BattleManager/CameraPaths/Path3D"]
transform = Transform3D(0.999891, -0.000441828, -0.012604, 0, 0.99936, -0.0350324, 0.0126117, 0.0350295, 0.999285, -3.91275, 0.563349, -4.64343)
script = ExtResource("26_2xwa2")

[connection signal="rotate_finished" from="BattleManager/PlayerUnits/Sam" to="BattleManager" method="_on_unit_rotate_finished"]
[connection signal="rotate_finished" from="BattleManager/PlayerUnits/Sophie" to="BattleManager" method="_on_unit_rotate_finished"]
[connection signal="rotate_finished" from="BattleManager/PlayerUnits/BB" to="BattleManager" method="_on_unit_rotate_finished"]

[editable path="BattleManager/PlayerUnits/Sam/Sam2"]
[editable path="BattleManager/PlayerUnits/Sophie/Sophia"]
